--- a/css/styles.css
+++ b/css/styles.css
@@ -91,6 +91,46 @@ body .canvas {
     font-size: 20px;
   }
 
+  .highScore {
+    position: absolute;
+    z-index: 1000;
+    pointer-events: none;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: end;
+    padding: 20px;
+    color: white;
+    font-size: large;
+  }
+
+  .score {
+    position: absolute;
+    z-index: 1000;
+    pointer-events: none;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: start;
+    padding: 20px;
+    color: white;
+    font-size: large;
+  }
+
+  .lives {
+    position: absolute;
+    z-index: 1000;
+    pointer-events: none;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: start;
+    padding: 20px;
+    left: 200px;
+    color: white;
+    font-size: large;
+  }
+
   .firstContainer {
     display: flex;
     justify-content: center;
