Colisões / vidas / highScore / Try Again / tiros

--- a/css/styles.css
+++ b/css/styles.css
@@ -91,6 +91,16 @@ body .canvas {
     font-size: 20px;
   }
 
+
+  .gameOver {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    visibility: hidden;
+  }
+
   .highScore {
     position: absolute;
     z-index: 1000;
