--- a/Asteroids-Game-main/css/styles.css
+++ b/Asteroids-Game-main/css/styles.css
@@ -34,7 +34,7 @@ main {
   z-index: 1000;
   position: absolute;
   width: 600px;
-  height: 520px;
+  height: 600px;
   justify-content: center;
   color: white;
   align-items: center;
@@ -127,7 +127,6 @@ main {
 
 /* Hide the images by default */
 .contentInsideMenu {
-  display: flex;
   position: relative;
   margin: auto;
   text-align: center;
@@ -174,7 +173,6 @@ main {
   color: #f2f2f2;
   font-size: 15px;
   padding: 5px 12px;
-  position: absolute;
   bottom: 2px;
   width: 100%;
   text-align: center;
@@ -329,7 +327,6 @@ h4 {
   height: 60px;
   width: 150px;
   display: flex;
-
   cursor: pointer;
   justify-content: center;
   align-items: center;
@@ -366,8 +363,23 @@ h4 {
   transition: all 300ms ease;
 }
 
+.btn.selected:after {
+  width: 300%;
+  height: 300%;
+  left: -300%;
+  transform: rotate(45deg);
+  background-color: rgb(255, 255, 255);
+  transition: all 300ms ease;
+}
+
 .btn:hover h4 {
   color: #500243;
+  z-index: 10;
+  font-weight: 600;
+}
+
+.btn.selected:hover h4 {
+  color: #000000;
   z-index: 10;
   font-weight: 600;
 }
